--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vocab Master</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>VocabMaster - Learn English Vocabulary with SRS</title>
+    <meta name="description" content="Learn English vocabulary effectively with spaced repetition (SRS), pronunciation, leaderboard and group learning." />
+    <meta name="keywords" content="learn vocabulary, srs, english words, toeic vocabulary, vocabulary app" />
+    <meta name="author" content="VocabMaster" />
+    <link rel="canonical" href="https://vocabmaster.store" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vocabmaster.store" />
+    <meta property="og:title" content="VocabMaster - Smart Vocabulary Learning" />
+    <meta property="og:description" content="Master English vocabulary using SRS method." />
+    <meta property="og:image" content="https://vocabmaster.store/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://vocabmaster.store" />
+    <meta property="twitter:title" content="VocabMaster - Smart Vocabulary Learning" />
+    <meta property="twitter:description" content="Master English vocabulary using SRS method." />
+    <meta property="twitter:image" content="https://vocabmaster.store/og-image.png" />
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>V</text></svg>">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
@@ -14,16 +34,25 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PJH2JLVJZF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PJH2JLVJZF');
+</script>
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
